<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/bg_toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:elevation="4dp">

        <TextView
            android:id="@+id/clearFiltersMenuItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:textSize="14sp"
            android:textStyle="normal"
            android:text="@string/menu_action_clear"
            android:layout_marginEnd="16dp" />

        <ru.bpc.mobilebanksdk.ui.views.AppSettingsView
            android:id="@+id/app_settings_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/param_output_value"
            android:textSize="14sp"
            android:text="@string/title_section_filter_date"
            android:layout_marginBottom="20dp"/>

        <ru.bpc.mobilebanksdk.ui.views.FilterView
            android:id="@+id/filterView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:choiceMode="single"
            app:itemLayout="@layout/view_pfm_chip_button"
            app:lineMaxCount="3"
            app:itemSpacingHorizontal="8dp"
            app:itemSpacingVertical="12dp"
            app:fillLine="true" />

        <LinearLayout
            android:id="@+id/datePicker"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/param_output_value"
                android:textSize="14sp"
                android:text="@string/title_param_date_filter_from"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/dateCustomFilterFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Medium"
                android:layout_marginBottom="11dp"
                tools:text="July 3, 2018"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/pfm_horizontal_divider"
                android:layout_marginBottom="13dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/param_output_value"
                android:textSize="14sp"
                android:text="@string/title_param_date_filter_to"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/dateCustomFilterTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Medium"
                android:layout_marginBottom="11dp"
                tools:text="July 3, 2018"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/pfm_horizontal_divider"/>

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="4dp"
        android:clipToPadding="false">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:layout_gravity="bottom"
            android:background="?android:windowBackground"
            android:padding="16dp"
            android:outlineProvider="paddedBounds" >
            <ru.bpc.mobilebanksdk.ui.views.ContinueButton
                android:id="@+id/applyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/button_filter_apply"
                app:state="disable"
                app:style="login"/>
        </FrameLayout>

    </FrameLayout>

</LinearLayout>